# tigervnc

./: BUILDING.txt  CMakeLists.txt
.github/: dependabot.yml
.github/workflows/: build.yml  test-report.yml
common/rfb/: CMakeLists.txt  CaptureRectCoalesce.cxx  CaptureRectCoalesce.h  EncodeManager.cxx  EncodeManager.h  EncodingPolicy.cxx  EncodingPolicy.h  H264Encoder.cxx  H264Encoder.h  H264EncoderContext.cxx  H264EncoderContext.h  H264WinDecoderContext.cxx  H264WinEncoderContext.cxx  H264WinEncoderContext.h
doc/: encoding-policy.md  windows-capture-backends.md
release/: CMakeLists.txt  collect_runtime_deps.cmake  tigervnc.iss.in  winvnc.iss.in
tests/unit/: CMakeLists.txt  capturerectcoalesce.cxx  encodingpolicy.cxx
win/rfb_win32/: CMakeLists.txt  CaptureBackend.cxx  CaptureBackend.h  CaptureBackendDxgi.cxx  CaptureBackendDxgi.h  CaptureBackendGdi.cxx  CaptureBackendGdi.h  CaptureBackendWgc.cxx  CaptureBackendWgc.h
win/winvnc/: winvnc.cxx
